// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form should match the snapshot with the administration form 1`] = `
<div
  className="jsx-2235865583 "
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
      style={
        Object {
          "marginLeft": "25px",
        }
      }
    >
      <h1
        className="jsx-2235865583 form-title"
      >
        &lt;mock-value-for-field-"name"&gt;
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={false}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <div
        className="form-row"
      >
        <div
          className="col-12"
        >
          <legend />
        </div>
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-12"
            >
              <legend>
                Operator Information
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_name"
              >
                Legal name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_name"
                label="Legal name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value="TestOperator"
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_tradeName"
              >
                Trade name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_tradeName"
                label="Trade name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_naics"
              >
                NAICS code
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_naics"
                label="NAICS code"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_bcCorporateRegistryNumber"
              >
                BC Corporate Registry number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_bcCorporateRegistryNumber"
                label="BC Corporate Registry number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operator_duns"
              >
                DUNS number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operator_duns"
                label="DUNS number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="col-12"
            >
              <div
                className="form-row"
              >
                <div
                  className="col-12"
                >
                  <legend>
                    Operator Mailing Address
                  </legend>
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_streetAddress"
                  >
                    Street address
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_streetAddress"
                    label="Street address"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_city"
                  >
                    City
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_city"
                    label="City"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_postalCode"
                  >
                    Postal Code
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_postalCode"
                    label="Postal Code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operator_mailingAddress_province"
                  >
                    Province or Territory
                  </label>
                  <select
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operator_mailingAddress_province"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    value=""
                  >
                    <option
                      value=""
                    >
                      
                    </option>
                    <option
                      value="Alberta"
                    >
                      Alberta
                    </option>
                    <option
                      value="British Columbia"
                    >
                      British Columbia
                    </option>
                    <option
                      value="Manitoba"
                    >
                      Manitoba
                    </option>
                    <option
                      value="New Brunswick"
                    >
                      New Brunswick
                    </option>
                    <option
                      value="Newfoundland and Labrador"
                    >
                      Newfoundland and Labrador
                    </option>
                    <option
                      value="Northwest Territories"
                    >
                      Northwest Territories
                    </option>
                    <option
                      value="Nova Scotia"
                    >
                      Nova Scotia
                    </option>
                    <option
                      value="Nunavut"
                    >
                      Nunavut
                    </option>
                    <option
                      value="Ontario"
                    >
                      Ontario
                    </option>
                    <option
                      value="Prince Edward Island"
                    >
                      Prince Edward Island
                    </option>
                    <option
                      value="Quebec"
                    >
                      Quebec
                    </option>
                    <option
                      value="Saskatchewan"
                    >
                      Saskatchewan
                    </option>
                    <option
                      value="Yukon"
                    >
                      Yukon
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-12"
            >
              <legend>
                Operational Representative
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_firstName"
              >
                First Name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_firstName"
                label="First Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_lastName"
              >
                Last Name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_lastName"
                label="Last Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_position"
              >
                Position/Title
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_position"
                label="Position/Title"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_email"
              >
                Email Address
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_email"
                label="Email Address"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_phone"
              >
                Telephone Number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_phone"
                label="Telephone Number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_operationalRepresentative_fax"
              >
                Fax Number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_operationalRepresentative_fax"
                label="Fax Number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="col-12"
            >
              <div
                className="form-row"
              >
                <div
                  className="col-12"
                >
                  <legend>
                    Operational Representative Mailing Address
                  </legend>
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_streetAddress"
                  >
                    Street address
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_streetAddress"
                    label="Street address"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_city"
                  >
                    City
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_city"
                    label="City"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_postalCode"
                  >
                    Postal Code
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_postalCode"
                    label="Postal Code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_operationalRepresentative_mailingAddress_province"
                  >
                    Province or Territory
                  </label>
                  <select
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_operationalRepresentative_mailingAddress_province"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    value=""
                  >
                    <option
                      value=""
                    >
                      
                    </option>
                    <option
                      value="Alberta"
                    >
                      Alberta
                    </option>
                    <option
                      value="British Columbia"
                    >
                      British Columbia
                    </option>
                    <option
                      value="Manitoba"
                    >
                      Manitoba
                    </option>
                    <option
                      value="New Brunswick"
                    >
                      New Brunswick
                    </option>
                    <option
                      value="Newfoundland and Labrador"
                    >
                      Newfoundland and Labrador
                    </option>
                    <option
                      value="Northwest Territories"
                    >
                      Northwest Territories
                    </option>
                    <option
                      value="Nova Scotia"
                    >
                      Nova Scotia
                    </option>
                    <option
                      value="Nunavut"
                    >
                      Nunavut
                    </option>
                    <option
                      value="Ontario"
                    >
                      Ontario
                    </option>
                    <option
                      value="Prince Edward Island"
                    >
                      Prince Edward Island
                    </option>
                    <option
                      value="Quebec"
                    >
                      Quebec
                    </option>
                    <option
                      value="Saskatchewan"
                    >
                      Saskatchewan
                    </option>
                    <option
                      value="Yukon"
                    >
                      Yukon
                    </option>
                  </select>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-12"
            >
              <legend>
                Facility Information
              </legend>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_facilityName"
              >
                Facility Name
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_facilityName"
                label="Facility Name"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_facilityType"
              >
                Facility Type
              </label>
              <select
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_facilityType"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={false}
                value=""
              >
                <option
                  value=""
                >
                  
                </option>
                <option
                  value="IF_a"
                >
                  IF_a
                </option>
                <option
                  value="IF_b"
                >
                  IF_b
                </option>
                <option
                  value="L_c"
                >
                  L_c
                </option>
                <option
                  value="SFO"
                >
                  SFO
                </option>
                <option
                  value="LFO"
                >
                  LFO
                </option>
                <option
                  value="EIO"
                >
                  EIO
                </option>
              </select>
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_bcghgid"
              >
                BCGHG ID Number
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_bcghgid"
                label="BCGHG ID Number"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_naics"
              >
                NAICS Code
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_facility_naics"
                label="NAICS Code"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                type="text"
                value=""
              />
            </div>
            <div
              className="col-12"
            >
              <div
                className="form-row"
              >
                <div
                  className="col-12"
                >
                  <legend>
                    Facility Mailing Address
                  </legend>
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_facility_mailingAddress_streetAddress"
                  >
                    Street address
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_facility_mailingAddress_streetAddress"
                    label="Street address"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_facility_mailingAddress_city"
                  >
                    City
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_facility_mailingAddress_city"
                    label="City"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_facility_mailingAddress_postalCode"
                  >
                    Postal Code
                  </label>
                  <input
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_facility_mailingAddress_postalCode"
                    label="Postal Code"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    placeholder=""
                    readOnly={false}
                    required={false}
                    type="text"
                    value=""
                  />
                </div>
                <div
                  className="form-group field field-string form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
                >
                  <label
                    className="form-label"
                    htmlFor="root_facility_mailingAddress_province"
                  >
                    Province or Territory
                  </label>
                  <select
                    autoFocus={false}
                    className="form-control"
                    disabled={false}
                    id="root_facility_mailingAddress_province"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    required={false}
                    value=""
                  >
                    <option
                      value=""
                    >
                      
                    </option>
                    <option
                      value="Alberta"
                    >
                      Alberta
                    </option>
                    <option
                      value="British Columbia"
                    >
                      British Columbia
                    </option>
                    <option
                      value="Manitoba"
                    >
                      Manitoba
                    </option>
                    <option
                      value="New Brunswick"
                    >
                      New Brunswick
                    </option>
                    <option
                      value="Newfoundland and Labrador"
                    >
                      Newfoundland and Labrador
                    </option>
                    <option
                      value="Northwest Territories"
                    >
                      Northwest Territories
                    </option>
                    <option
                      value="Nova Scotia"
                    >
                      Nova Scotia
                    </option>
                    <option
                      value="Nunavut"
                    >
                      Nunavut
                    </option>
                    <option
                      value="Ontario"
                    >
                      Ontario
                    </option>
                    <option
                      value="Prince Edward Island"
                    >
                      Prince Edward Island
                    </option>
                    <option
                      value="Quebec"
                    >
                      Quebec
                    </option>
                    <option
                      value="Saskatchewan"
                    >
                      Saskatchewan
                    </option>
                    <option
                      value="Yukon"
                    >
                      Yukon
                    </option>
                  </select>
                </div>
              </div>
            </div>
            <div
              className="form-group field field-boolean form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_facility_isFacilityLocationDifferent"
              >
                Is the facility location different from the mailing address?
              </label>
              <div
                className="field-radio-group"
                id="root_facility_isFacilityLocationDifferent"
              >
                <div
                  className="radio "
                >
                  <label>
                    <span>
                      <input
                        autoFocus={false}
                        checked={false}
                        disabled={false}
                        name="0"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        type="radio"
                        value={true}
                      />
                      <span>
                         Yes
                      </span>
                    </span>
                  </label>
                </div>
                <div
                  className="radio "
                >
                  <label>
                    <span>
                      <input
                        autoFocus={false}
                        checked={false}
                        disabled={false}
                        name="0"
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        required={false}
                        type="radio"
                        value={false}
                      />
                      <span>
                         No
                      </span>
                    </span>
                  </label>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="jsx-2235865583 form-submit"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
          style="line-height:48px"
        >
          <a
            href="/user-dashboard"
          >
            Save & Exit
          </a>
        </div>
        <div
          class="col-md-9"
          style="text-align:right"
        >
          <button
            class="btn btn-primary btn-lg"
            type="submit"
          >
            Continue
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the electricity and heat form 1`] = `
<div
  className="jsx-2235865583 "
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
      style={
        Object {
          "marginLeft": "25px",
        }
      }
    >
      <h1
        className="jsx-2235865583 form-title"
      >
        &lt;mock-value-for-field-"name"&gt;
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={false}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <div
        className="form-row"
      >
        <div
          className="col-12"
        >
          <legend />
        </div>
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-12"
            >
              <legend>
                Electricity
              </legend>
            </div>
            <div
              className="form-group field field-number form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_electricity_purchased"
              >
                Purchased
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_electricity_purchased"
                label="Purchased"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_electricity_sold"
              >
                Sold
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_electricity_sold"
                label="Sold"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                step="any"
                type="number"
                value={81}
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_electricity_consumedOnSite"
              >
                Consumed On-Site
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_electricity_consumedOnSite"
                label="Consumed On-Site"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_electricity_generatedOnSite"
              >
                Generated On-Site
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_electricity_generatedOnSite"
                label="Generated On-Site"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="col-12"
        >
          <div
            className="form-row"
          >
            <div
              className="col-12"
            >
              <legend>
                Heat
              </legend>
            </div>
            <div
              className="form-group field field-number form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_heat_purchased"
              >
                Purchased
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_heat_purchased"
                label="Purchased"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_heat_sold"
              >
                Sold
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_heat_sold"
                label="Sold"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                step="any"
                type="number"
                value={81}
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-4 col-lg-4 col-md-4 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_heat_consumedOnSite"
              >
                Consumed On-Site
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_heat_consumedOnSite"
                label="Consumed On-Site"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
            <div
              className="form-group field field-number form-group col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12"
            >
              <label
                className="form-label"
                htmlFor="root_heat_generatedOnSite"
              >
                Generated On-Site
              </label>
              <input
                autoFocus={false}
                className="form-control"
                disabled={false}
                id="root_heat_generatedOnSite"
                label="Generated On-Site"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder=""
                readOnly={false}
                required={false}
                step="any"
                type="number"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="jsx-2235865583 form-submit"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
          style="line-height:48px"
        >
          <a
            href="/user-dashboard"
          >
            Save & Exit
          </a>
        </div>
        <div
          class="col-md-9"
          style="text-align:right"
        >
          <button
            class="btn btn-primary btn-lg"
            type="submit"
          >
            Continue
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the emission form 1`] = `
<div
  className="jsx-2235865583 emission-form no-col-padding"
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
      style={
        Object {
          "marginLeft": "25px",
        }
      }
    >
      <h1
        className="jsx-2235865583 form-title"
      >
        &lt;mock-value-for-field-"name"&gt;
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={false}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <div
        className="form-row"
      >
        <div
          className="col-12"
        >
          <legend />
        </div>
        <div
          className="col-12"
        >
          <div
            className="jsx-529402721 field field-array field-array-of-object"
          >
            <div
              className="form-row"
            >
              <div
                className="col-md-12 col-12"
              >
                <div
                  className="col-12"
                >
                  <div
                    className="form-row"
                  >
                    <div
                      className="col-12"
                    >
                      <legend />
                    </div>
                    <div
                      className="form-group field field-string  hidden-title form-group col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"
                    >
                      <label
                        className="form-label"
                        htmlFor="root_sourceTypes_0_sourceTypeName"
                      >
                        sourceTypeName
                      </label>
                      <div
                        className="row"
                        style={
                          Object {
                            "margin": "20px 0 20px 0",
                          }
                        }
                      >
                        <div
                          className="col-md-4 col-12"
                        >
                          <h5
                            className="jsx-2806087631"
                            style={
                              Object {
                                "textAlign": "left",
                              }
                            }
                          />
                        </div>
                        <div
                          className="col-md-3 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            Tonnes
                          </h6>
                        </div>
                        <div
                          className="col-md-2 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            GWP
                          </h6>
                        </div>
                        <div
                          className="col-md-3 col-12"
                        >
                          <h6
                            className="jsx-2806087631"
                          >
                            Tonnes (CO2e)
                          </h6>
                        </div>
                      </div>
                    </div>
                    <div
                      className="col-12"
                    >
                      <div
                        className="jsx-529402721 field field-array field-array-of-object"
                      >
                        <div
                          className="form-row"
                        >
                          <div
                            className="col-md-12 col-12"
                          >
                            <div
                              className="col-12"
                            >
                              <div
                                className="form-row"
                              >
                                <div
                                  class="hidden emission-row col-md-12 col-12"
                                >
                                  <div
                                    className="form-row"
                                  >
                                    <div
                                      className="col-md-4"
                                    >
                                      CH4
                                       
                                      <br
                                        className="jsx-1154833918"
                                      />
                                      <div
                                        className="col-md-10"
                                        style={
                                          Object {
                                            "color": "#888",
                                            "lineHeight": "17px",
                                            "margin": 0,
                                            "padding": 0,
                                          }
                                        }
                                      >
                                        <small
                                          className="jsx-1154833918"
                                        >
                                          gassy
                                        </small>
                                      </div>
                                    </div>
                                    <div
                                      className="col-md-3"
                                    >
                                      <input
                                        className="form-control"
                                        onChange={[Function]}
                                        type="number"
                                        value={65}
                                      />
                                    </div>
                                    <div
                                      className="col-md-2"
                                      style={
                                        Object {
                                          "marginTop": "5px",
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <ul
                                        className="jsx-1154833918 gwp"
                                      >
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          X
                                        </li>
                                        <li
                                          className="jsx-1154833918"
                                        />
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          =
                                        </li>
                                      </ul>
                                    </div>
                                    <div
                                      className="col-md-3"
                                    >
                                      <input
                                        className="form-control"
                                        disabled={true}
                                        type="number"
                                        value={1625}
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <hr
                          className="jsx-529402721"
                        />
                        <div
                          className="form-row"
                        >
                          <div
                            className="col-md-12 col-12"
                          >
                            <div
                              className="col-12"
                            >
                              <div
                                className="form-row"
                              >
                                <div
                                  class="hidden emission-row col-md-12 col-12"
                                >
                                  <div
                                    className="form-row"
                                  >
                                    <div
                                      className="col-md-4"
                                    >
                                      C02
                                       
                                      <br
                                        className="jsx-1154833918"
                                      />
                                      <div
                                        className="col-md-10"
                                        style={
                                          Object {
                                            "color": "#888",
                                            "lineHeight": "17px",
                                            "margin": 0,
                                            "padding": 0,
                                          }
                                        }
                                      >
                                        <small
                                          className="jsx-1154833918"
                                        >
                                          not as gassy
                                        </small>
                                      </div>
                                    </div>
                                    <div
                                      className="col-md-3"
                                    >
                                      <input
                                        className="form-control"
                                        onChange={[Function]}
                                        type="number"
                                        value={5}
                                      />
                                    </div>
                                    <div
                                      className="col-md-2"
                                      style={
                                        Object {
                                          "marginTop": "5px",
                                          "textAlign": "center",
                                        }
                                      }
                                    >
                                      <ul
                                        className="jsx-1154833918 gwp"
                                      >
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          X
                                        </li>
                                        <li
                                          className="jsx-1154833918"
                                        />
                                        <li
                                          className="jsx-1154833918"
                                        >
                                          =
                                        </li>
                                      </ul>
                                    </div>
                                    <div
                                      className="col-md-3"
                                    >
                                      <input
                                        className="form-control"
                                        disabled={true}
                                        type="number"
                                        value={25}
                                      />
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                        <hr
                          className="jsx-529402721"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <hr
              className="jsx-529402721"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="jsx-2235865583 form-submit"
    >
      <div
        class="row"
      >
        <div
          class="col-md-3"
          style="line-height:48px"
        >
          <a
            href="/user-dashboard"
          >
            Save & Exit
          </a>
        </div>
        <div
          class="col-md-9"
          style="text-align:right"
        >
          <button
            class="btn btn-secondary btn-lg"
            style="margin-right:10px"
            type="button"
          >
            Back
          </button>
          <button
            class="btn btn-primary btn-lg"
            type="submit"
          >
            Continue
          </button>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the fuel form 1`] = `
<div
  className="jsx-2235865583 "
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
      style={
        Object {
          "marginLeft": "25px",
        }
      }
    >
      <h1
        className="jsx-2235865583 form-title"
      >
        &lt;mock-value-for-field-"name"&gt;
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={false}
    onSubmit={[Function]}
  >
    <div
      className="col-12"
    >
      <div
        className="jsx-529402721 field field-array field-array-of-object"
      >
        <div
          className="form-row"
        >
          <div
            className="col-md-10 col-12"
          >
            <div
              className="col-12"
            >
              <div
                className="form-row"
              >
                <div
                  className="col-md-6 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.fuelType"
                    >
                      Fuel Type
                    </label>
                    <select
                      className="form-control"
                      id="id.fuelType"
                      onChange={[Function]}
                      value="C/D Waste - Plastic"
                    >
                      <option
                        value=""
                      >
                        ...
                      </option>
                      <option>
                        C/D Waste - Plastic
                      </option>
                      <option>
                        Diesel
                      </option>
                    </select>
                  </div>
                </div>
                <div
                  className="col-md-4 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.quantity"
                    >
                      Quantity
                    </label>
                    <input
                      className="form-control"
                      defaultValue={4}
                      id="id.quantity"
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
                <div
                  className="col-md-2 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.fuelUnits"
                    >
                      Units
                    </label>
                    <select
                      className="form-control"
                      id="id.fuelUnits"
                      onChange={[Function]}
                      value="t"
                    >
                      <option
                        value=""
                      >
                        ...
                      </option>
                      <option>
                        t
                      </option>
                    </select>
                  </div>
                </div>
                <div
                  className="col-md-6 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.methodology"
                    >
                      Methodology
                    </label>
                    <select
                      className="form-control"
                      id="id.methodology"
                      onChange={[Function]}
                      value="wci 1.0"
                    >
                      <option
                        value=""
                      >
                        ...
                      </option>
                      <option
                        value="wci 1.0"
                      >
                        WCI 1.0
                      </option>
                      <option
                        value="wci 2.0"
                      >
                        WCI 2.0
                      </option>
                      <option
                        value="wci 3.0"
                      >
                        WCI 3.0
                      </option>
                    </select>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-2 col-12"
          >
            <div
              className="jsx-529402721 remove-button-container"
            >
              <button
                className="btn btn-danger"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Remove fuel
              </button>
            </div>
          </div>
        </div>
        <hr
          className="jsx-529402721"
        />
        <div
          className="form-row"
        >
          <div
            className="col-12"
          >
            <div
              className="jsx-529402721 add-button-container"
            >
              <button
                className="btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Add a fuel
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-2235865583 form-submit"
      style={
        Object {
          "textAlign": "right",
        }
      }
    >
      <button
        className="btn btn-primary btn-lg"
        disabled={false}
        type="submit"
      >
        Continue
      </button>
    </div>
  </form>
</div>
`;

exports[`Form should match the snapshot with the production form 1`] = `
<div
  className="jsx-2235865583 "
>
  <div
    className="row"
  >
    <div
      className="col-md-12"
      style={
        Object {
          "marginLeft": "25px",
        }
      }
    >
      <h1
        className="jsx-2235865583 form-title"
      >
        &lt;mock-value-for-field-"name"&gt;
      </h1>
    </div>
  </div>
  <form
    className="rjsf"
    noValidate={false}
    omitExtraData={true}
    safeRenderCompletion={true}
    schema={
      Object {
        "definitions": Object {
          "production": Object {
            "properties": Object {
              "associatedEmissions": Object {
                "title": "Associated Emission (tCO2e)",
                "type": "number",
              },
              "comments": Object {
                "title": "comments",
                "type": "string",
              },
              "product": Object {
                "title": "Processing Unit Module",
                "type": "string",
              },
              "productUnits": Object {
                "title": "Units",
                "type": "string",
              },
              "quantity": Object {
                "title": "Quantity",
                "type": "number",
              },
            },
            "type": "object",
          },
        },
        "items": Object {
          "$ref": "#/definitions/production",
        },
        "type": "array",
      }
    }
    showErrorList={false}
    transformErrors={[Function]}
    uiSchema={
      Object {
        "items": Object {
          "ui:field": "production",
        },
        "ui:add-text": "Add a Product",
        "ui:remove-text": "Remove Product",
      }
    }
  >
    <div
      className="col-12"
    >
      <div
        className="jsx-529402721 field field-array field-array-of-object"
      >
        <div
          className="form-row"
        >
          <div
            className="col-md-10 col-12"
          >
            <div
              className="col-12"
            >
              <div
                className="form-row"
              >
                <div
                  className="col-md-6 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.product"
                    >
                      Product
                    </label>
                    <select
                      className="form-control"
                      id="id.product"
                      onChange={[Function]}
                      value="Dehydration"
                    >
                      <option
                        value=""
                      >
                        ...
                      </option>
                      <option>
                        &lt;mock-value-for-field-"name"&gt;
                      </option>
                    </select>
                  </div>
                </div>
                <div
                  className="col-md-2 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.productUnits"
                    >
                      Units
                    </label>
                    <select
                      className="form-control"
                      id="id.productUnits"
                      onChange={[Function]}
                      value="kL"
                    >
                      <option
                        value=""
                      >
                        ...
                      </option>
                    </select>
                  </div>
                </div>
                <div
                  className="col-md-6 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.quantity"
                    >
                      Quantity
                    </label>
                    <input
                      className="form-control"
                      defaultValue={84}
                      id="id.quantity"
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
                <div
                  className="col-md-4 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.associatedEmissions"
                    >
                      Associated Emisisons (tCO2e)
                    </label>
                    <input
                      className="form-control"
                      defaultValue={42}
                      id="id.associatedEmissions"
                      onChange={[Function]}
                      type="number"
                    />
                  </div>
                </div>
                <div
                  className="col-md-12 col-12"
                >
                  <div
                    className="form-group"
                  >
                    <label
                      className="form-label"
                      htmlFor="id.comments"
                    >
                      Comments
                    </label>
                    <textarea
                      className="form-control"
                      id="id.comments"
                      onChange={[Function]}
                      type="string"
                      value="Saepe quis aliquid e"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="col-md-2 col-12"
          >
            <div
              className="jsx-529402721 remove-button-container"
            >
              <button
                className="btn btn-danger"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Remove Product
              </button>
            </div>
          </div>
        </div>
        <hr
          className="jsx-529402721"
        />
        <div
          className="form-row"
        >
          <div
            className="col-12"
          >
            <div
              className="jsx-529402721 add-button-container"
            >
              <button
                className="btn btn-primary"
                disabled={false}
                onClick={[Function]}
                type="button"
              >
                Add a Product
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="jsx-2235865583 form-submit"
    >
      <ForwardRef
        noGutters={false}
      >
        <Col
          md={3}
          style={
            Object {
              "lineHeight": "48px",
            }
          }
        >
          <Link
            href={
              Object {
                "pathname": "/user-dashboard",
              }
            }
          >
            Save & Exit
          </Link>
        </Col>
        <Col
          md={9}
          style={
            Object {
              "textAlign": "right",
            }
          }
        >
          <Button
            active={false}
            disabled={false}
            size="lg"
            type="submit"
            variant="primary"
          >
            Continue
          </Button>
        </Col>
      </ForwardRef>
    </div>
  </form>
</div>
`;
